ui/css/main.css
/*include padding and border in the total width and height of elements */
* {
    box-sizing: border-box;
}

/* For mobile phones: */
[class*="col-"] {
    width: 100%;
    float: left;
    padding: 15px;
}

    /* For tablets: */
@media only screen and (min-width: 600px) {
    .col-sm-1 {width: 8.33%;}
    .col-sm-2 {width: 16.66%;}
    .col-sm-3 {width: 25%;}
    .col-sm-4 {width: 33.33%;}
    .col-sm-5 {width: 41.66%;}
    .col-sm-6 {width: 50%;}
    .col-sm-7 {width: 58.33%;}
    .col-sm-8 {width: 66.66%;}
    .col-sm-9 {width: 75%;}
    .col-sm-10 {width: 83.33%;}
    .col-sm-11 {width: 91.66%;}
    .col-sm-12 {width: 100%;}
}

    /* For small laptops: */
@media only screen and (min-width: 992px) {
    .col-md-1 {width: 8.33%;}
    .col-md-2 {width: 16.66%;}
    .col-md-3 {width: 25%;}
    .col-md-4 {width: 33.33%;}
    .col-md-5 {width: 41.66%;}
    .col-md-6 {width: 50%;}
    .col-md-7 {width: 58.33%;}
    .col-md-8 {width: 66.66%;}
    .col-md-9 {width: 75%;}
    .col-md-10 {width: 83.33%;}
    .col-md-11 {width: 91.66%;}
    .col-md-12 {width: 100%;}
}
    /* For Laptops and desktops: */
@media only screen and (min-width: 1200px) {
    .col-lg-1 {width: 8.33%;}
    .col-lg-2 {width: 16.66%;}
    .col-lg-3 {width: 25%;}
    .col-lg-4 {width: 33.33%;}
    .col-lg-5 {width: 41.66%;}
    .col-lg-6 {width: 50%;}
    .col-lg-7 {width: 58.33%;}
    .col-lg-8 {width: 66.66%;}
    .col-lg-9 {width: 75%;}
    .col-lg-10 {width: 83.33%;}
    .col-lg-11 {width: 91.66%;}
    .col-lg-12 {width: 100%;}
}
/*when screen is less than 600px wide, hide all links except for the first one("Home"). 
Show link that opens and closes the navbar*/
@media screen and (max-width: 600px) {
    .navbar li:not(:first-child){
        display: none;
    }
    .navbar li.icon{
        float: right;
        display: block;
    }
    /*responsive class is added with javascript when user clicks on the icon.
    This class handles display for small screens*/
    .navbar.responsive{
        position: relative;
    }
    .navbar.responsive li.icon{
        position: absolute;
        right: 0;
        top: 0;
    }
    .navbar.responsive li, .dropbtn, .drp-content{
        float: none !important;
        display: block;
        text-align: left;
    }
    /*make table behave not as a table*/
    table, thead, tbody, th, td, tr {
      display: block;
  }
}
.row::before{
    content: "";
    display: table;
    clear: both;
}

.containter{
    padding-left: 16px;
    padding-right: 16px;
    margin: 0 16px 50px 16px;
    min-height: 100%;
}
/*Hide elements with this class */
.hide{
    display: none;
}
/*Display elements with this class*/
.show{
    display: block;
}
/*center text*/
.text-center{
    text-align: center;
}

/*center elements in div*/
.div-center{
    align-items: center;
    justify-content: center;
    display: flex;
}

/*style form and its elements*/
form{
    padding:0 10px 0 10px;

}

input[type=text], input[type=password], input[type=email], button[type=submit]{
    display: inline-block;

    
}
label{
    width: 50%;
}
label, input {
    font-size: 18px;
    text-align: center;
}
/*style navbar*/
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

li {
    float: left;
}

li a {
    display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
a {
    text-decoration: none;
    border-radius: 5px;
}

/*hide link that opens and closes the navbar on small screens*/
.icon{
    display: none;
}

/*navbar,footer */
.navbar, footer{
    padding: 0px;
    overflow: hidden;
    border-radius: 5px; 
    background-color: #32936f;
    
}
footer{
    width: 99%;
    text-align: center;
    bottom: 0px !important;
    position: fixed;
    height: 8%

}
.navbar, footer, li a, button, h1 a,h3 a{
    color: #fff;
    font-weight: bold;
    font-size: 1.1em;

}
#submit{
    display: inline-block;
    width:auto;
    padding: 10px;
    font-size: 16px;
    border-radius: 5px;
}

a:hover, a.active{
    background-color:#fff;
    color: #32936f !important;
}
.btn-primary,h1 a,h3 a{
    background-color:#32936f;
}
a {
    color: #3e92cc;
}
.div-with-border, .details{
    border: 1px solid #32936f;
    border-radius: 5px;
    margin-top: 2px;
    padding:5px;
}
.border-bottom{
    border-bottom: 1px solid #32936f;
    border-radius: 5px;
}
.header{
    color: #32936f;
}

/*elements with this class are displayed on the right*/
.right{
    float: right !important;
}

.clear{
    clear: both;
    height: 100px;
}

/*color for star ratings*/
.checked {
    color: #32936f;
}

.ride_details{
    padding: 16px;
    margin-top: 16px;
    display: block !important;

}
.ride_details p{
    font-size: 1.3em;
}
.label, .name{
    color: #32936f;
    display: inline-block;
    margin:5px 0 5px 0;
    clear: left;
}
.value{
    float: right;
    clear: right;
}
.join a{
    background-color: #32936f !important;
    color: #fff;
    text-align: center;
    padding: 5px;
}

.user-photo{
    float: left;
}
.user-photo img{
    width: 200px;
    height: 200px;
    border-radius:50%;
}
/*style table*/
table{
    width: 100%;
    background-color: #e8fccf;
    border-radius: 5px;
    padding: 2px;
}
th{
    background-color: #32936f;
    color: #fff;
    font-size: 1.3em;
    padding: 5px;
}
td{
    color: #134611;
}
.profile{
    float: left;
}

.profile img{
    width: 70%;
    height:70%;
    border-radius: 50%;
    margin:10px;
}

.description{
    float: right;
}
.stars{
    float: right;
}
.comments, .user-details{
    border-bottom:1px solid;
    margin-top: 5px;
}
.reviewer{
    float: left;
}
th, td {
    text-align: center;
    border-bottom: 1px solid #ddd;
}
tr:hover{
    background-color: #ade25d;
    color: #157f1f !important;
}
.pending, .accepted, .rejected{
    font-size: 1.4em;
    text-align: left;
}

.pending, .fa-exclamation{
    color: #ff8552;
}
.accepted, tr .fa-check{
    color: #157f1f;
}
.rejected,.fa-times,.fa-ban{
    color: Red;
}
.accepted, .fa-check{
    color: #157f1f;
}
.rejected,.fa-times,.fa-ban{
    color: Red;
}
tr .car_icon{
    width: 40px;
    height: 30px;
}
td a{
    background-color: #32936f;
    color: #fff;
    padding:4px;
    margin:4px;
    display: inline-block;
}
td a.danger{
    background-color: Red;
}
i.fa-plus{
    font-size: 3em;
    text-align: center;
}
/* error message */
.error p{
    color: red;
    font-size: 1.5em;
    font-weight: bold;
}

.center{
    width: 50%;
    margin-left: 25%;
}



.modal{
    display: none;
    position: fixed;
    z-index: 1;
    overflow: auto;
    width: 50%;
    height: 50%;
    margin-left: 25%;
    margin-right: 25%;
    background-color: #629767;
    border-radius: 10px;
}
.modal-header{
    width: 100%;
    height: 14%;
    display: block;
    clear: both;
}
.modal-header p{
    color: #fff;
    font-size: 28px;
    font-weight: bold;
}
.modal-content{
    position: absolute;
    top:55%;
    left: 50%;
    width: 70%;
    height: 80%;
    transform: translate(-50%, -50%)
}

/* The Close Button */
.close {
    color: #fff;
    background-color: #157f1f;
    float: right;
    clear: both;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.search{
    background-color:#32936f;
    border-radius:3px;
    border: 1px solid #32936f;
    height: 1.6em;
}

